--- a/oabutton/settings_local.py.example
+++ b/oabutton/settings_local.py.example
@@ -2,6 +2,7 @@ DEBUG = False
 TEMPLATE_DEBUG = DEBUG
 
 DB_USER = 'postgres'
+DB_HOST = ''
 
 # API key for CORE searches
 CORE_API_KEY = "you need this"
